# tanggalan

./: .gitignore  .npmrc  ALGORITHM.md  API.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PLAN.md  README.md  SHOWCASE.md  __init__.py  core.py  go.mod  jsdoc.json  package-lock.json  package.json  pyproject.toml  tanggalan.go  tanggalan_test.go
.github/workflows/: cargo-publish.yml  go.yml  npm-publish.yml  pypi-publish.yml  static.yml
benchmark/: index.js
docs/: JS.md  PYTHON.md  RUST.md
lib/: tanggalan.js
pages/: TODO.md  index.html  preview.html
pages/css/: style.css
pages/css/partials/: _calendar.css  _controls.css  _layout.css  _print.css  _variables.css
pages/js/: app.js  demo.js
pages/js/modules/: events.js  renderer.js  state.js  utils.js
pages/preview/: index.html
pages/preview/css/partials/: _base.css
pages/preview/js/modules/: utils.js
scripts/: build-npm.js  build-pages.js  sync-version.js  verify-pypi.sh
src/: calculation.rs  constants.rs  core.rs  lib.rs
src/bindings/: python.rs  wasm.rs
test/: date_difference.js  functional.js  get_gregorian.js  kabisat.js  next_weton.js  pasaran_validation.js
tests/: integration_test.rs  node_test.js  python_test.py  test_tanggalan.py
