[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tanggalan"
version = "1.1.0"
description = "Pustaka lengkap untuk konversi Kalender Jawa."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [{name = "bect"}]
keywords = ["javanese", "calendar", "date", "weton", "primbon"]
license = {text = "ISC"}

[project.urls]
Repository = "https://github.com/bect/tanggalan"

[tool.maturin]
features = ["python"]